force-app/main/default/objects/CrafterPdfTemplate__mdt/CrafterPdfTemplate__mdt.object-meta.xml
<CustomObject>
    <description>Defines a branded PDF template for Crafter PDF. Each record controls layout, branding, and content sections for a generated PDF.</description>
    <label>Crafter PDF Template</label>
    <pluralLabel>Crafter PDF Templates</pluralLabel>
</CustomObject>