force-app/main/default/objects/CrafterPdfTemplate__mdt/fields/Brand_Color__c.field-meta.xml
<CustomField>
    <fullName>Brand_Color__c</fullName>
    <description>Primary hex brand color used in PDF headers, accents, and charts (e.g. #ff7a3d).</description>
    <label>Brand Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>