force-app/main/default/objects/CrafterPdfTemplate__mdt/fields/Cover_Page__c.field-meta.xml
<CustomField>
    <fullName>Cover_Page__c</fullName>
    <description>When true, Crafter PDF prepends a branded cover page to the generated document.</description>
    <label>Cover Page</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>