force-app/main/default/objects/CrafterPdfTemplate__mdt/fields/Footer_Text__c.field-meta.xml
<CustomField>
    <fullName>Footer_Text__c</fullName>
    <description>Optional text displayed in the PDF page footer. Supports {!PageNumber} merge field.</description>
    <label>Footer Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>