force-app/main/default/objects/CrafterPdfTemplate__mdt/fields/Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Text__c</fullName>
    <description>Optional text displayed in the PDF page header. Supports {!Date} and {!OrgName} merge fields.</description>
    <label>Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>