force-app/main/default/objects/CrafterPdfTemplate__mdt/fields/Logo_Static_Resource__c.field-meta.xml
<CustomField>
    <fullName>Logo_Static_Resource__c</fullName>
    <description>API name of the Static Resource containing the logo image (PNG or SVG). Rendered on cover page and header.</description>
    <label>Logo Static Resource</label>
    <length>80</length>
    <type>Text</type>
</CustomField>