force-app/main/default/objects/CrafterPdfTemplate__mdt/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <description>PDF page size. Supported values: Letter, A4.</description>
    <label>Page Size</label>
    <type>Text</type>
    <length>10</length>
</CustomField>